[package]
name = "openlibrary-client"
version = "0.1.0"
authors = ["Max Hackigner <mahaxi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.1"
futures = "0.3.0"
async-std = "1.6.5"
surf = "2"
void = "1.0.2"
mockito = "0.27.0"
anyhow = "1.0.32"

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0"


